Fix topfooter on mobileview

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -42,3 +42,13 @@
         color: #fff;
     }
 }
+
+@media screen and (max-width: 768px) {
+    .topfooter{
+        margin-top: 15px;
+        flex-direction: column;
+        .sect2{
+            margin-left: -35px;
+        }
+    }
+}
